--- a/frontend/src/pages/RecipesPage.css
+++ b/frontend/src/pages/RecipesPage.css
@@ -1,12 +1,16 @@
 .container {
-  display: grid;
-  grid-template-columns: 1fr; 
-  gap: 20px; /* Adjust the gap as needed for desired spacing */
-  padding: 40px; 
-  max-width: 800px; 
-  margin: 0 auto; 
+  display: flex;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  /* Adjust the gap as needed for desired spacing */
+  padding: 40px;
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%
 }
 
-.tile-container { /* Target the RecipeTile container */
-  margin: 0; /* Remove any default margins */
+.tile-container {
+  /* Target the RecipeTile container */
+  margin: 0;
+  /* Remove any default margins */
 }
