--- a/frontend/src/components/RecipeTile.css
+++ b/frontend/src/components/RecipeTile.css
@@ -23,7 +23,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .tile-title {
@@ -58,9 +59,10 @@ button {
   background-color: #ff6666;
   color: white;
   border: none;
-  padding: 8px 12px;
+  padding: 8px 10px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 0.9em;
   align-self: center;
+  margin-left: 10px;
 }
