--- a/frontend/src/pages/RecipesPage.css
+++ b/frontend/src/pages/RecipesPage.css
@@ -1,16 +1,18 @@
-.container {
-  display: flex;
-  grid-template-columns: 1fr;
+.recipe-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  /* Adjust the gap as needed for desired spacing */
-  padding: 40px;
-  max-width: 800px;
-  margin: 0 auto;
-  width: 100%
+  padding: 20px;
+  max-width: 1300px;
+  padding-left: calc(60px + 10px);
+  margin-top: 50px;
+  justify-content: center;
 }
 
 .tile-container {
-  /* Target the RecipeTile container */
-  margin: 0;
-  /* Remove any default margins */
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
