--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,23 +8,31 @@
 }
 
 .logo-container {
-  position: absolute;
-  top: 20px; /* Distance from the top */
-  left: 20px; /* Distance from the left */
+  position: fixed;
+  top: 20px;
+  /* Distance from the top */
+  left: 20px;
+  /* Distance from the left */
   display: flex;
   align-items: center;
 }
 
 .logo-container img {
-  width: 50px; /* Adjust logo size */
-  height: auto; /* Maintain aspect ratio */
-  margin-right: 10px; /* Space between logo and text */
+  width: 50px;
+  /* Adjust logo size */
+  height: auto;
+  /* Maintain aspect ratio */
+  margin-right: 10px;
+  /* Space between logo and text */
 }
 
 .logo-container h1 {
-  font-size: 1.5em; /* Adjust text size */
-  color: #333; /* Text color */
-  margin: 0; /* Remove default margins */
+  font-size: 1.5em;
+  /* Adjust text size */
+  color: #333;
+  /* Text color */
+  margin: 0;
+  /* Remove default margins */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -52,6 +60,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
