--- a/frontend/src/pages/RecipesPage.css
+++ b/frontend/src/pages/RecipesPage.css
@@ -1,7 +1,7 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding-right: 0; */
   height: 100%;
   overflow: hidden;
 }
@@ -10,13 +10,14 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  padding: 20px;
-  margin-top: 100px;
+  padding-left: 30px;
+  padding-right: 50px;
+  margin-top: 150px;
   box-sizing: border-box;
   height: 100vh;
   overflow-y: auto;
 }
 
 .recipe-grid-tile-container {
-  padding: 20px;
+  padding: 10px;
 }
