--- a/frontend/src/components/RecipeTile.css
+++ b/frontend/src/components/RecipeTile.css
@@ -1,5 +1,6 @@
 .tile-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
@@ -21,6 +22,7 @@
 
 .content {
   flex: 1;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
