--- a/frontend/src/components/RecipeTile.css
+++ b/frontend/src/components/RecipeTile.css
@@ -10,12 +10,13 @@
   background-color: #f9f9f9;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
+  height: 400px;
 }
 
 .tile-container img {
-  max-width: 100px;
-  max-height: 100px;
-  margin-right: 15px;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
   border-radius: 8px;
   object-fit: cover;
 }
@@ -32,13 +33,15 @@
 .tile-title {
   font-size: 1.2em;
   font-weight: bold;
-  margin-bottom: 5px;
+  text-align: center;
 }
 
 .summary {
   font-size: 0.9em;
   color: #666;
-  margin-bottom: 20px;
+  text-align: center;
+  /* Center the summary text */
+  flex-grow: 1;
 }
 
 .tags {
@@ -55,16 +58,4 @@
   font-size: 0.8em;
   margin-right: 5px;
   margin-bottom: 5px;
-}
-
-button {
-  background-color: #ff6666;
-  color: white;
-  border: none;
-  padding: 8px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 0.9em;
-  align-self: center;
-  margin-left: 10px;
 }
