--- a/frontend/src/pages/RecipesPage.css
+++ b/frontend/src/pages/RecipesPage.css
@@ -1,23 +1,41 @@
 html,
 body {
-  /* margin: 0;
-  padding-right: 0; */
+  margin: 0;
+  padding: 0;
   height: 100%;
   overflow: hidden;
 }
 
-.recipe-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding-left: 30px;
-  padding-right: 50px;
-  margin-top: 150px;
-  box-sizing: border-box;
+.recipe-wrapper {
   height: 100vh;
+  padding-top: 75px;
+  box-sizing: border-box;
   overflow-y: auto;
 }
 
-.recipe-grid-tile-container {
-  padding: 10px;
+.recipe-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.recipe-tile-container {
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+button.delete-button {
+  background-color: #ff6666;
+  color: white;
+  border: none;
+  padding: 8px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9em;
+  align-self: center;
 }
