--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -20,6 +20,5 @@
 
 .custom-search-button {
     background-color: #28a745 !important;
-    color: white;
-    border: white;
-  }
+    color: white !important;
+}
